--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Web site created using create-react-app"/>
     <!-- importation de fontawsome -->
     <script src="https://kit.fontawesome.com/59156f5274.js" crossorigin="anonymous"></script>
-    <title>Groupomania</title>
+    <title>3WA</title>
 
   </head>
   <body>
